--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>Hello World!</h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Learn Enough Git to be dangerous</title>
+    </head>
+    <body>
+        <h1>Hello World!</h1>
+        <p>Call me Ishmael.</p>
+    </body>
+</html>
