--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Learn Enough Git to be dangerous</title>
+        <title>A whale of a greeting</title>
     </head>
     <body>
         <h1>Hello World!</h1>
